# copymanga-downloader

./: function.py  main.py  my_cbz.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
