[tool.poetry]
name = "copymanga-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.31.0"
retrying = ">=1.3.4"
rich = ">=13.3.2"
cbz = "^3.2.0"
tomlkit = "^0.12.5"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
